@@ -1,3 +1,7 @@
+2008-03-10 svu
+
+	* libxklavier/xklavier_evt.c: a
+
 2009-03-09  svu
 
 	* libxklavier/xklavier_config_xkb.c: no need to display loads of 
